--- a/src/css/Main.css
+++ b/src/css/Main.css
@@ -2,7 +2,27 @@
 @tailwind components;
 @tailwind utilities;
 
-.header-bg {
-    color: var(--first);
-    background-color: var(--first);
+/* Start Header Portion here */
+
+.nav-text {
+    color: var(--fourth);
+}
+
+.hideMenuNav {
+    display: none;
+}
+
+.showMenuNav {
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    background: white;
+    z-index: 10;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
 }
