--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,52 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Colors for Default Dark Mode */
 :root {
   --first: #0D2438;
   --second: #6F6EFF;
-  --third: #212E4D;
+  --third: #1E3851;
   --fourth: #FFFFFF;
+}
+
+/* Font Families and Colors */
+.roboto {
+  font-family: 'Roboto', sans-serif;
+}
+
+.scp {
+  font-family: 'Source Code Pro', monospace;
+}
+
+.text-first {
+  color: var(--first);
+}
+
+.text-second {
+  color: var(--second);
+}
+
+.text-third {
+  color: var(--third);
+}
+
+.text-fourth {
+  color: var(--fourth);
+}
+
+/* Background Colors */
+.bg-first {
+  background-color: var(--first);
+}
+
+.bg-second {
+  background-color: var(--second);
+}
+
+.bg-third {
+  background-color: var(--third);
+}
+
+.bg-fourth {
+  background-color: var(--fourth);
 }
