Updates to Web Portfolio

--- a/src/css/Main.css
+++ b/src/css/Main.css
@@ -26,3 +26,9 @@
     justify-content: space-evenly;
     align-items: center;
 }
+
+/* Start Home Portion Here */
+
+#homeBackground {
+    background-color: var(--second);
+}
