--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,10 @@
   color: var(--fourth);
 }
 
+.text-white {
+  color: var(--white);
+}
+
 /* Background Colors */
 .bg-first {
   background-color: var(--first);
