--- a/src/css/Main.css
+++ b/src/css/Main.css
@@ -2,6 +2,19 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Default Options */
+body, html {
+    height: 100%;
+    margin: 0px;
+    overflow: auto;
+}
+
+html {
+    height: 100%;
+    margin: 0px;
+    overflow: hidden;
+}
+
 /* Start Header Portion here */
 
 .nav-text {
